fixed alignment

--- a/style1.css
+++ b/style1.css
@@ -4,6 +4,32 @@
     font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
 }
+.col-md-4{
+  width: 28%!important;;
+}
+.step {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5px;
+}
+.step span{
+  flex:1;
+  
+}
+.step span:first-of-type{
+  text-align: right;
+  padding-right: 5px;
+}
+.step span:last-of-type{
+  text-align: left;
+  padding-left: 5px;
+}
+
+/* .step span:first-child {
+  margin-right: 5px;
+} */
 
 .card-img-top {
   width: 100%;
